# tangram_compression

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark.cpp  tangram_compressed_shader_info.ts  tangram_dict_compressed.ts  tangram_shader_compressed.ts  zstd_dict_compressed_data_22.ts  zstd_dict_compressed_info_22.ts  zstd_dict_data.ts
benchmark/lz4/: lz4hc.c
benchmark/zlib/: zconf.h
decompressor/: CMakeLists.txt  decompressor.cpp  decompressor.h  standalone.cpp
decompressor/zstd/: zstd_errors.h
decompressor/zstd/common/: xxhash.h
decompressor/zstd/compress/: zstd_compress.c
decompressor/zstd/dictBuilder/: cover.c  divsufsort.c  divsufsort.h  zdict.c
example/: CMakeLists.txt  example.bat  example.cpp
example/input/: example_shader_0.glsl  example_shader_1.glsl  example_shader_10.glsl  example_shader_11.glsl  example_shader_12.glsl  example_shader_13.glsl  example_shader_14.glsl  example_shader_15.glsl  example_shader_16.glsl  example_shader_17.glsl  example_shader_18.glsl  example_shader_19.glsl  example_shader_2.glsl  example_shader_20.glsl  example_shader_21.glsl  example_shader_22.glsl  example_shader_23.glsl  example_shader_24.glsl  example_shader_25.glsl  example_shader_26.glsl  example_shader_27.glsl  example_shader_28.glsl  example_shader_29.glsl  example_shader_3.glsl  example_shader_30.glsl  example_shader_31.glsl  example_shader_4.glsl  example_shader_5.glsl  example_shader_6.glsl  example_shader_7.glsl  example_shader_8.glsl  example_shader_9.glsl
source/: main.cpp
source/ast_to_gl/: ast_to_glsl.cpp  ast_tranversar.h  code_block_build.h  generate_code_block.cpp  graph_partition.cpp  helper_tranverser.cpp  variable_name_manager.cpp  variable_name_manager.h  variable_rename.cpp
source/code_blk_compression/: glsl_parser.cpp  glsl_parser.h  huff_fse_compression.cpp  shader_compress.cpp  shader_compress.h  validate_result.cpp
source/core/: common.cpp  common.h  job_system.cpp  job_system.h  tangram.cpp  tangram.h  tangram_log.cpp  tangram_log.h
source/graph/: extra_features.cpp  graph_build.h  graph_build_job.cpp  graph_build_job.h  graph_clustering.cpp  graph_construct.cpp  graph_io.cpp  graph_pair_merge.cpp  hash_graph.cpp  hash_graph.h  hierarchi_toposort.cpp  merge_graphs.cpp  visualize_graph.cpp
source/hash_tree/: ast_hash_string.cpp  ast_hash_tree.cpp  ast_hash_tree.h  ast_node_deepcopy.cpp  ast_node_deepcopy.h  node_serialize.cpp  node_serialize.h
source/reader/: shader_reader.cpp  shader_reader.h  standalone_reader.cpp  standalone_reader.h
source/unit_test/: node_serialize_test.cpp  unit_test.h
