cmake_minimum_required(VERSION 3.19 FATAL_ERROR)

set(CMAKE_GENERATOR_TOOLSET "ClangCL")
set(ALLOW_EXTERNAL_SPIRV_TOOLS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(decomp_standalone VERSION 0.1.0)
file(GLOB_RECURSE DECOMPRESSOR_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
file(GLOB_RECURSE DECOMPRESSOR_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
add_executable(${PROJECT_NAME} ${DECOMPRESSOR_HEADER_FILES} ${DECOMPRESSOR_SOURCE_FILES}  "${CMAKE_CURRENT_SOURCE_DIR}/decompressor.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/standalone.cpp")
