cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(example VERSION 0.1.0)

file(GLOB_RECURSE EXAMPLE_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/example.cpp")
file(GLOB_RECURSE DECOMPRESSOR_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../decompressor/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/../decompressor/decompressor.cpp")

add_definitions(-D EXAMPLE_ROOT_DIR=${CMAKE_CURRENT_SOURCE_DIR})
add_executable(${PROJECT_NAME} ${DECOMPRESSOR_SOURCE_FILES}  ${EXAMPLE_SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../decompressor)